--- a/BarStoolsCircular/CircularCollectionViewCell.xib
+++ b/BarStoolsCircular/CircularCollectionViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="bottom" reuseIdentifier="Cell" id="gTV-IL-0wX" customClass="CircularCollectionViewCell" customModule="BarStoolsCircular" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="bottom" reuseIdentifier="Cell" id="gTV-IL-0wX" customClass="CircularCollectionViewCell" customModule="BarBetsChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="177" height="184"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
